Misaligned fix (#457)
* Update extension.js

* Update stylesheet.css

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -1,3 +1,10 @@
+.panel-media-indicator .popup-sub-menu > * > * > :first-child,
+.panel-media-indicator .popup-sub-menu > * > * > :last-child > :first-child,
+.panel-media-indicator .popup-sub-menu > * > * > :last-child > :first-child > :first-child {
+    margin:  0;
+    padding: 0;
+}
+
 .player-buttons {
     spacing: 2px;
 }
